--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100 font-sans leading-normal tracking-normal">
 
   <!-- Hero Section -->
-  <header class="bg-cover bg-center h-screen" style="background-image: url('https://source.unsplash.com/1600x900/?conference,event');">
+  <header class="bg-cover bg-center h-screen" style="background-image: url('https://github.com/southeast-expo-center/SEEC_Landing/blob/main/logo.png?raw=true');">
     <div class="h-full bg-black bg-opacity-50 flex items-center justify-center">
       <div class="text-center text-white px-4">
         <h1 class="text-4xl md:text-6xl font-bold mb-4">Welcome to the Southeast Expo Center</h1>
