--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 </head>
 <body class="bg-gray-100 font-sans leading-normal tracking-normal">
 
+  <!-- Navbar with Logo -->
+  <nav class="bg-white shadow-lg sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4">
+      <div class="flex justify-between items-center py-4">
+        <!-- Logo -->
+        <a href="#" class="flex items-center">
+          <img src="https://github.com/southeast-expo-center/SEEC_Landing/blob/main/logo.png?raw=true" alt="Southeast Expo Center Logo" class="w-24 h-auto">
+          <span class="sr-only">Southeast Expo Center</span>
+        </a>
+      </div>
+    </div>
+  </nav>
+
   <!-- Hero Section -->
-  <header class="bg-cover bg-center h-screen" style="background-image: url('https://github.com/southeast-expo-center/SEEC_Landing/blob/main/logo.png?raw=true');">
+  <header class="bg-cover bg-center h-screen" style="background-image: url('https://github.com/southeast-expo-center/SEEC_Landing/blob/main/Rodeo.jpg?raw=true');">
     <div class="h-full bg-black bg-opacity-50 flex items-center justify-center">
       <div class="text-center text-white px-4">
         <h1 class="text-4xl md:text-6xl font-bold mb-4">Welcome to the Southeast Expo Center</h1>
@@ -24,47 +37,50 @@
   <section class="py-16 bg-white">
     <div class="max-w-7xl mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold text-gray-800 mb-6">About Us</h2>
-      <p class="text-gray-600 leading-relaxed text-lg mb-8">The Southeast Expo Center is a premier venue offering a spacious environment for a variety of events, including trade shows, expos, corporate meetings, community events, and more.</p>
-      <a href="#contact" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-full transition duration-300">Contact Us</a>
+      <p class="text-gray-600 leading-relaxed text-lg mb-8">
+        Welcome to the Southeast Expo Center, a premier venue offering a spacious environment for a variety of events, including trade shows, expos, corporate meetings, community events, and more. Located in the heart of McAlester, Oklahoma, our center is designed to bring communities together, spark ideas, and create memorable experiences.
+      </p>
+      <a href="#contact" class="bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-6 rounded-full transition duration-300">Contact Us</a>
     </div>
   </section>
 
   <!-- Features Section -->
   <section class="py-16 bg-gray-100" id="events">
     <div class="max-w-7xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">Our Features</h2>
+      <h2 class="text-3xl font-bold text-gray-800 mb-6">Upcoming Events</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <!-- Feature 1 -->
+        <!-- Event 1 -->
         <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
-          <img src="https://source.unsplash.com/300x200/?networking" alt="Networking" class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Networking Opportunities</h3>
-          <p class="text-gray-600">Meet and connect with industry leaders and peers to grow your network.</p>
+          <img src="https://github.com/southeast-expo-center/SEEC_Landing/blob/main/sleigh-bells.jpg?raw=true" alt="Sleigh Bells Market" class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Sleigh Bells Market</h3>
+          <p class="text-gray-600">Join us for a magical experience filled with unique artisan vendors, festive treats, live entertainment, and holiday cheer for the whole family.</p>
         </div>
-        <!-- Feature 2 -->
+        <!-- Event 2 -->
         <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
-          <img src="https://source.unsplash.com/300x200/?expo" alt="Exhibitors" class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Wide Range of Exhibitors</h3>
-          <p class="text-gray-600">Explore a diverse selection of exhibitors offering products and services for everyone.</p>
+          <img src="https://github.com/southeast-expo-center/SEEC_Landing/blob/main/WanderlustMarket.jpg?raw=true" alt="Wanderlust Market" class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Wanderlust Market</h3>
+          <p class="text-gray-600">Explore handcrafted goods, art, jewelry, and more from diverse backgrounds, all in one place.</p>
         </div>
-        <!-- Feature 3 -->
+        <!-- Event 3 -->
         <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition duration-300">
-          <img src="https://source.unsplash.com/300x200/?speakers" alt="Speakers" class="rounded-lg mb-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">Expert Speakers</h3>
-          <p class="text-gray-600">Gain insights from industry experts and thought leaders.</p>
+          <img src="https://github.com/southeast-expo-center/SEEC_Landing/blob/main/italian-festival.jpg?raw=true" alt="Italian Festival" class="rounded-lg mb-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Italian Festival</h3>
+          <p class="text-gray-600">Celebrate Italy with authentic cuisine, live music, traditional dances, and artisan crafts for all ages.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- CTA Section -->
-  <section class="bg-blue-600 py-16">
+  <section class="bg-green-600 py-16">
     <div class="max-w-7xl mx-auto px-6 text-center text-white">
-      <h2 class="text-3xl font-bold mb-4">Ready to Join Us?</h2>
-      <p class="text-lg mb-8">Don’t miss out on the upcoming events at Southeast Expo Center. Reserve your spot today!</p>
-      <a href="#contact" class="bg-white text-blue-600 font-semibold py-3 px-6 rounded-full hover:bg-gray-200 transition duration-300">Get Started</a>
+      <h2 class="text-3xl font-bold mb-4">Book Your Event</h2>
+      <p class="text-lg mb-8">Don’t miss out on the chance to host your event at the Southeast Expo Center. Reserve your space today!</p>
+<!--       <button onclick="toggleForm()" class="bg-white text-blue-600 font-semibold py-3 px-6 rounded-full hover:bg-gray-200 transition duration-300">Book Event</button>
     </div>
-  </section>
+  </section> -->
 
+ 
   <!-- Contact Section -->
   <section class="py-16 bg-white" id="contact">
     <div class="max-w-7xl mx-auto px-6 text-center">
@@ -83,5 +99,4 @@
     </div>
   </footer>
 
-</body>
-</html>
+  <!-- JavaScript for Form Submission and Toggle Visibility -->
