--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <header class="bg-cover bg-center h-screen" style="background-image: url('https://github.com/southeast-expo-center/SEEC_Landing/blob/main/Rodeo.jpg?raw=true');">
+  <header class="bg-cover bg-center h-screen" style="background-image: url('https://github.com/southeast-expo-center/SEEC_Landing/blob/main/Rodeo2.JPG?raw=true');">
     <div class="h-full bg-black bg-opacity-50 flex items-center justify-center">
       <div class="text-center text-white px-4">
         <h1 class="text-4xl md:text-6xl font-bold mb-4">Welcome to the Southeast Expo Center</h1>
